--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, 'Sign Up') %>
-<h1>Sign Up</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="center hero-unit">
+	<h1>Sign Up</h1>
+	<h2>Find me in app/views/users/new.html.erb</h2>
+</div>
